--- a/veiculoInterfaz/veiculoInterfaz.csproj
+++ b/veiculoInterfaz/veiculoInterfaz.csproj
@@ -66,6 +66,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -78,6 +79,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Img\back-arrow.png" />
+    <Content Include="Img\down-arrow.png" />
+    <Content Include="Img\forward-arrow.png" />
+    <Content Include="Img\left-arrow.png" />
+    <Content Include="Img\right-arrow.png" />
+    <Content Include="Img\up-arrow.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
