--- a/veiculoInterfaz/veiculoInterfaz.csproj
+++ b/veiculoInterfaz/veiculoInterfaz.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -81,6 +82,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Img\forward-arrow -menos.png" />
+    <None Include="Img\back-arrow -menos.png" />
     <Content Include="Img\back-arrow.png" />
     <Content Include="Img\down-arrow.png" />
     <Content Include="Img\forward-arrow.png" />
